--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,15 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/assets/css/gaia.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "src/assets/js/gaia.js",
+              "src/assets/js/modernizr.js"
             ]
           },
           "configurations": {
