--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
     "@angular/forms": "~12.0.3",
+    "@angular/material": "^12.1.1",
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
-    "bootstrap": "^5.0.2",
+    "@material/menu": "^11.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@popperjs/core": "^2.9.2",
+    "angular-bootstrap-md": "^11.1.0",
+    "bootstrap": "^4.5.0",
     "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
     "tslib": "^2.1.0",
