--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-bootstrap-md": "^11.1.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.6.0",
+    "ng2-page-scroll": "^4.0.0-beta.12",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
