--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.3",
+    "@angular/cdk": "^12.1.1",
     "@angular/common": "~12.0.3",
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
     "@angular/forms": "~12.0.3",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^12.1.1",
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@material/card": "^11.0.0",
     "@material/menu": "^11.0.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@popperjs/core": "^2.9.2",
@@ -27,6 +30,7 @@
     "bootstrap": "^3.3.2",
     "jquery": "^1.11.2",
     "ng2-page-scroll": "^4.0.0-beta.12",
+    "ngx-link-preview": "^1.1.6",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
